net.sf.ictalive.operetta.psdeditor/src/net/sf/ictalive/operetta/psdeditor/antlr/PSDParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g 2010-09-13 18:47:32

/*
 * Generated by ANTLR from net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g
 *
 * Do not modify this file directly.
 *
 */

package net.sf.ictalive.operetta.psdeditor.antlr;
import java.util.Collections;
import org.antlr.runtime.Token;
import org.eclipse.emf.transaction.TransactionalEditingDomain;
import net.sf.ictalive.operetta.OM.PartialStateDescription;
import net.sf.ictalive.operetta.OM.PathFormula;
import net.sf.ictalive.operetta.OM.StateFormula;
import net.sf.ictalive.operetta.OM.Atom;
import net.sf.ictalive.operetta.OM.Term;
import net.sf.ictalive.operetta.OM.OM;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class PSDParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENT", "OPERATOR", "NUMBER", "WS", "'U'", "'X'", "'F'", "'G'", "'->'", "'\\u2192'", "'|'", "'\\u2228'", "'^'", "'&'", "'\\u2227'", "'~'", "'\\u00ac'", "'['", "']'", "'('", "')'", "'E'", "'A'", "','", "'$'"
    };
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int OPERATOR=5;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int NUMBER=6;
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__8=8;
    public static final int T__19=19;
    public static final int WS=7;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__10=10;
    public static final int IDENT=4;

    // delegates
    // delegators


        public PSDParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PSDParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return PSDParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g"; }


    protected TransactionalEditingDomain editingDomain;
    protected OM om;

    public class ParseResult {
    	public PartialStateDescription psd;
    	public Ranges ranges;
    	public ParseResult(PartialStateDescription psd, Ranges ranges) {
    		this.psd = psd;
    		this.ranges = ranges;
    	}
    }
        
    public static ParseResult parse(TransactionalEditingDomain editingDomain, OM om, String inputStr) throws ParseException {
    	//System.out.println("Input: \""+inputStr+"\"\n");
    	PSDLexer lexer = new PSDLexer(new ANTLRStringStream(inputStr));
    	CommonTokenStream tokens = new CommonTokenStream(lexer);
    	PSDParser parser = new PSDParser(tokens);
    	parser.editingDomain = editingDomain;
    	
    	parser.allRanges = parser.new Ranges();
    	parser.om = om;

    	try {
    		PartialStateDescription psd = parser.root();
    		parser.allRanges.patch(inputStr.length());
    		return parser.new ParseResult(psd, parser.allRanges);
    	}
    	catch (IllegalArgumentException e) {
    		RecognitionException lexerException = (RecognitionException)e.getCause();
    		throw new ParseException(lexer.getErrorMessage(lexerException,lexer.getTokenNames()), lexerException.charPositionInLine);
    	}
    	catch (RecognitionException e)  {
    		throw new ParseException(parser.getErrorMessage(e,parser.getTokenNames()), e.charPositionInLine);
    	}
    }

    @Override
    protected Object recoverFromMismatchedToken(IntStream input,
        	int ttype,
        	BitSet follow)
    throws RecognitionException
    {
    	throw new MismatchedTokenException(ttype, input);
    }
        
    // return the position of the token 
    int getPos(Token start) {
    	return start.getCharPositionInLine();
    }

    // return the position of the next token to be processed
    int getCurrentPos() {
    	return input.LT(1).getCharPositionInLine();
    }

    public Ranges allRanges;

    public class Ranges extends ArrayList<Range>{
    	public Ranges() {
    	}
    	
    	public Ranges(Token start) {
    		super();
    	}

    	// track is called on creation, but also in each of the chain rules, even if the chain has only 1 element
    	public void track(int startPos, int endPos, Object object) {
    		//System.out.println("Tracking "+psd+": <"+startPos+","+endPos+">");
    		add(new Range(object, startPos, endPos));
    	}
    	// reverse the list, so root range is at the top, and convert -1 to end position
    	public void patch(int endPos) {
    		Collections.reverse(this);
    		for (Range range : this)
    			if (range.endPos == -1)
    				range.endPos = endPos;

    	}
    };

    public class Range {
    	public Object object;
    	public int startPos;
    	public int endPos;
    	
    	public Range(Object object, int startPos, int endPos) {
    		this.object = object;
    		this.startPos = startPos;
    		this.endPos = endPos;
    	}
    }




    // $ANTLR start "root"
    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:155:1: root returns [PartialStateDescription sem] : ( state EOF | path EOF );
    public final PartialStateDescription root() throws RecognitionException {
        PartialStateDescription sem = null;

        PSDParser.state_return state1 = null;

        PSDParser.path_return path2 = null;


        try {
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:156:2: ( state EOF | path EOF )
            int alt1=2;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:157:3: state EOF
                    {
                    pushFollow(FOLLOW_state_in_root73);
                    state1=state();

                    state._fsp--;
                    if (state.failed) return sem;
                    match(input,EOF,FOLLOW_EOF_in_root75); if (state.failed) return sem;
                    if ( state.backtracking==0 ) {
                       sem = (state1!=null?state1.sem:null); 
                    }

                    }
                    break;
                case 2 :
                    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:159:3: path EOF
                    {
                    pushFollow(FOLLOW_path_in_root84);
                    path2=path();

                    state._fsp--;
                    if (state.failed) return sem;
                    match(input,EOF,FOLLOW_EOF_in_root86); if (state.failed) return sem;
                    if ( state.backtracking==0 ) {
                       sem = (path2!=null?path2.sem:null); 
                    }

                    }
                    break;

            }
        }
             finally {
        }
        return sem;
    }
    // $ANTLR end "root"

    public static class path_return extends ParserRuleReturnScope {
        public PathFormula sem;
    };

    // $ANTLR start "path"
    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:162:1: path returns [PathFormula sem] : p1= path1 ( ( 'U' ) p2= path1 )* ;
    public final PSDParser.path_return path() throws RecognitionException {
        PSDParser.path_return retval = new PSDParser.path_return();
        retval.start = input.LT(1);

        PSDParser.path1_return p1 = null;

        PSDParser.path1_return p2 = null;


         Ranges psds = new Ranges(((Token)retval.start)); 
        try {
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:163:3: (p1= path1 ( ( 'U' ) p2= path1 )* )
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:163:6: p1= path1 ( ( 'U' ) p2= path1 )*
            {
            pushFollow(FOLLOW_path1_in_path113);
            p1=path1();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) {
               psds.track(getPos(((Token)retval.start)), getCurrentPos(), (p1!=null?p1.sem:null)); 
            }
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:163:73: ( ( 'U' ) p2= path1 )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==8) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:163:74: ( 'U' ) p2= path1
            	    {
            	    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:163:74: ( 'U' )
            	    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:163:75: 'U'
            	    {
            	    match(input,8,FOLLOW_8_in_path119); if (state.failed) return retval;

            	    }

            	    pushFollow(FOLLOW_path1_in_path124);
            	    p2=path1();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	        psds.track(getPos(((Token)retval.start)), getCurrentPos(), (p2!=null?p2.sem:null)); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            if ( state.backtracking==0 ) {
              retval.sem = PSDSemantics.semPath( editingDomain, om, allRanges, psds); 
            }

            }

            retval.stop = input.LT(-1);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "path"

    public static class path1_return extends ParserRuleReturnScope {
        public PathFormula sem;
    };

    // $ANTLR start "path1"
    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:167:1: path1 returns [PathFormula sem] : ( 'X' state | 'F' state | 'G' state | path2 );
    public final PSDParser.path1_return path1() throws RecognitionException {
        PSDParser.path1_return retval = new PSDParser.path1_return();
        retval.start = input.LT(1);

        PSDParser.state_return state3 = null;

        PSDParser.state_return state4 = null;

        PSDParser.state_return state5 = null;

        PSDParser.path2_return path26 = null;


        try {
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:168:3: ( 'X' state | 'F' state | 'G' state | path2 )
            int alt3=4;
            switch ( input.LA(1) ) {
            case 9:
                {
                alt3=1;
                }
                break;
            case 10:
                {
                alt3=2;
                }
                break;
            case 11:
                {
                alt3=3;
                }
                break;
            case 19:
            case 20:
            case 21:
            case 23:
                {
                alt3=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:168:5: 'X' state
                    {
                    match(input,9,FOLLOW_9_in_path1150); if (state.failed) return retval;
                    pushFollow(FOLLOW_state_in_path1153);
                    state3=state();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                       retval.sem = PSDSemantics.semPath1_0( editingDomain, om, allRanges, getPos(((Token)retval.start)), getCurrentPos(), (state3!=null?state3.sem:null) ); 
                    }

                    }
                    break;
                case 2 :
                    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:169:5: 'F' state
                    {
                    match(input,10,FOLLOW_10_in_path1161); if (state.failed) return retval;
                    pushFollow(FOLLOW_state_in_path1164);
                    state4=state();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                       retval.sem = PSDSemantics.semPath1_1( editingDomain, om, allRanges, getPos(((Token)retval.start)), getCurrentPos(), (state4!=null?state4.sem:null) ); 
                    }

                    }
                    break;
                case 3 :
                    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:170:5: 'G' state
                    {
                    match(input,11,FOLLOW_11_in_path1172); if (state.failed) return retval;
                    pushFollow(FOLLOW_state_in_path1175);
                    state5=state();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                       retval.sem = PSDSemantics.semPath1_2( editingDomain, om, allRanges, getPos(((Token)retval.start)), getCurrentPos(), (state5!=null?state5.sem:null) ); 
                    }

                    }
                    break;
                case 4 :
                    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:171:4: path2
                    {
                    pushFollow(FOLLOW_path2_in_path1182);
                    path26=path2();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                       retval.sem = (path26!=null?path26.sem:null); 
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "path1"

    public static class path2_return extends ParserRuleReturnScope {
        public PathFormula sem;
    };

    // $ANTLR start "path2"
    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:174:1: path2 returns [PathFormula sem] : p1= path3 ( ( '->' | '\\u2192' ) p2= path3 )* ;
    public final PSDParser.path2_return path2() throws RecognitionException {
        PSDParser.path2_return retval = new PSDParser.path2_return();
        retval.start = input.LT(1);

        PSDParser.path3_return p1 = null;

        PSDParser.path3_return p2 = null;


         Ranges psds = new Ranges(((Token)retval.start)); 
        try {
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:175:3: (p1= path3 ( ( '->' | '\\u2192' ) p2= path3 )* )
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:175:7: p1= path3 ( ( '->' | '\\u2192' ) p2= path3 )*
            {
            pushFollow(FOLLOW_path3_in_path2210);
            p1=path3();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) {
               psds.track(getPos(((Token)retval.start)), getCurrentPos(), (p1!=null?p1.sem:null)); 
            }
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:175:74: ( ( '->' | '\\u2192' ) p2= path3 )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=12 && LA4_0<=13)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:175:75: ( '->' | '\\u2192' ) p2= path3
            	    {
            	    if ( (input.LA(1)>=12 && input.LA(1)<=13) ) {
            	        input.consume();
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_path3_in_path2223);
            	    p2=path3();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	        psds.track(getPos(((Token)retval.start)), getCurrentPos(), (p2!=null?p2.sem:null)); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            if ( state.backtracking==0 ) {
              retval.sem = PSDSemantics.semPath2( editingDomain, om, allRanges, psds); 
            }

            }

            retval.stop = input.LT(-1);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "path2"

    public static class path3_return extends ParserRuleReturnScope {
        public PathFormula sem;
    };

    // $ANTLR start "path3"
    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:178:1: path3 returns [PathFormula sem] : p1= path4 ( ( '|' | '\\u2228' ) p2= path4 )* ;
    public final PSDParser.path3_return path3() throws RecognitionException {
        PSDParser.path3_return retval = new PSDParser.path3_return();
        retval.start = input.LT(1);

        PSDParser.path4_return p1 = null;

        PSDParser.path4_return p2 = null;


         Ranges psds = new Ranges(((Token)retval.start)); 
        try {
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:179:3: (p1= path4 ( ( '|' | '\\u2228' ) p2= path4 )* )
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:179:6: p1= path4 ( ( '|' | '\\u2228' ) p2= path4 )*
            {
            pushFollow(FOLLOW_path4_in_path3325);
            p1=path4();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) {
               psds.track(getPos(((Token)retval.start)), getCurrentPos(), (p1!=null?p1.sem:null)); 
            }
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:179:73: ( ( '|' | '\\u2228' ) p2= path4 )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=14 && LA5_0<=15)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:179:74: ( '|' | '\\u2228' ) p2= path4
            	    {
            	    if ( (input.LA(1)>=14 && input.LA(1)<=15) ) {
            	        input.consume();
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_path4_in_path3338);
            	    p2=path4();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	        psds.track(getPos(((Token)retval.start)), getCurrentPos(), (p2!=null?p2.sem:null)); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            if ( state.backtracking==0 ) {
              retval.sem = PSDSemantics.semPath3( editingDomain, om, allRanges, psds); 
            }

            }

            retval.stop = input.LT(-1);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "path3"

    public static class path4_return extends ParserRuleReturnScope {
        public PathFormula sem;
    };

    // $ANTLR start "path4"
    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:182:1: path4 returns [PathFormula sem] : p1= path5 ( ( '^' | '&' | '\\u2227' ) p2= path5 )* ;
    public final PSDParser.path4_return path4() throws RecognitionException {
        PSDParser.path4_return retval = new PSDParser.path4_return();
        retval.start = input.LT(1);

        PSDParser.path5_return p1 = null;

        PSDParser.path5_return p2 = null;


         Ranges psds = new Ranges(((Token)retval.start)); 
        try {
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:183:2: (p1= path5 ( ( '^' | '&' | '\\u2227' ) p2= path5 )* )
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:183:5: p1= path5 ( ( '^' | '&' | '\\u2227' ) p2= path5 )*
            {
            pushFollow(FOLLOW_path5_in_path4368);
            p1=path5();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) {
               psds.track(getPos(((Token)retval.start)), getCurrentPos(), (p1!=null?p1.sem:null)); 
            }
            // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:183:72: ( ( '^' | '&' | '\\u2227' ) p2= path5 )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=16 && LA6_0<=18)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:183:73: ( '^' | '&' | '\\u2227' ) p2= path5
            	    {
            	    if ( (input.LA(1)>=16 && input.LA(1)<=18) ) {
            	        input.consume();
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_path5_in_path4383);
            	    p2=path5();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	        psds.track(getPos(((Token)retval.start)), getCurrentPos(), (p2!=null?p2.sem:null)); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            if ( state.backtracking==0 ) {
              retval.sem = PSDSemantics.semPath4( editingDomain, om, allRanges, psds); 
            }

            }

            retval.stop = input.LT(-1);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "path4"

    public static class path5_return extends ParserRuleReturnScope {
        public PathFormula sem;
    };

    // $ANTLR start "path5"
    // /Users/martijn/svn/ALIVEclipse workspace/net.sf.ictalive.operetta.psdeditor/ANTLR/PSD.g:186:1: path5 returns [PathFormula sem] : ( ( '~' | '\\u00ac' ) p= path5 | '[' state ']' | '(' path ')' );
    public final PSDParser.path5_return path5() throws RecognitionException {
        PSDParser.path5_return retval = new PSDParser.path5_return();
        retval.start = input.LT(1);

        PSDParser.path5_return p = null;

        PSDParser.state_return state7 = null;

        PSDParser.path_return path8 = null;

